--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,11 +15,8 @@
 	<style type="text/css">
 		<!--
 		BODY { 
-			background: url(cover.jpg) no-repeat center center fixed; 
-			opacity: 0.6
-			-webkit-background-size: cover;
-			-moz-background-size: cover;
-			-o-background-size: cover;
+			background: url(cover.jpg) no-repeat;
+			opacity: 0.6;
 			background-size: cover;
 		}
 	-->
