--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
 				<form class="form" method="post" action="/login">
 					<input type="text" class="form-control" placeholder="Enter your e-mail" name="email">
 					<br><br>
-					<input type="password" class="form-control" placeholder="Choose a password" name="password">
+					<input type="password" class="form-control" placeholder="Enter your password" name="password">
 					<br><br>
 					<input type="submit" value="Log me in" class="btn btn-primary">
 				</form>
