--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,54 +1,66 @@
 <% include header %>
 <br>
 <div class = "container">
-<div class="row">
-<div class = "glyph">
-  <div class=".col-md-offset-6 paragraph">Thanks for stopping by the Film Festival Finder! We're a one-stop shop for all your film festival needs. <a href="/search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> for the festival that fits your needs, save it and add notes. Enjoy!
-  </div>
-  </div>
-</div>
-</div>
-</div>
-
-
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-<%for(var i =1; i<data.length; i++){%>
-	<%if(data[i] != undefined){%>
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-       <img id="imageTest" src= "<%= data[0].images.standard_resolution.url%>">
-      <div class="carousel-caption">
-    
+  <div class="row">
+    <div class = "glyph">
+      <div class=".col-md-offset-6 paragraph">Thanks for stopping by the Film Festival Finder! We're a one-stop shop for all your film festival needs. <a href="/search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> for the festival that fits your needs, save it and add notes. 
+        <div id="aboutParagraph">
+          <p> With questions or comments, please <a href="mailto:stephaniejnilles@gmail.com" style="color:#337AB7">email Stephanie.</a> </p>
+        </div>
       </div>
     </div>
-    <%for(var i =1; i<data.length; i++){%>
-    <div class="item">
-      <img id="imageTest" src= "<%= data[i].images.standard_resolution.url%>">
-      <div class="carousel-caption">
-        
-      </div>
-    </div>
-    <%}%>
-<%}%>
-    
   </div>
-
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-  <br>
-  <div class="paragraph">*Disclaimer: The photos are from Instagram - we take no responsibility for their content!</div>
 </div>
-<%}%>
 
+
+<div class = "container">
+  <div class="row">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <%for(var i =1; i<data.length; i++){%>
+      <%if(data[i] != undefined){%>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+         <img class= "img-responsive center-block" id="imageTest" src= "<%= data[0].images.standard_resolution.url%>">
+         <div class="carousel-caption">
+          
+         </div>
+       </div>
+       <%for(var i =1; i<data.length; i++){%>
+       <div class="item">
+        <img class= "img-responsive center-block" id="imageTest" src= "<%= data[i].images.standard_resolution.url%>">
+        <div class="carousel-caption">
+          
+        </div>
+      </div>
+      <%}%>
+      <%}%>
+      
+    </div>
+
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphCarousel glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphCarousel glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    <br>
+  </div>
+  <%}%>
+</div>
+</div>
+
+<div class= "container">
+  <div class = "row">
+    <div class = "col-xs-12 col-md-6 col-md-offset-3">
+      <p id="disclaimer">*Disclaimer: The photos are from Instagram - we take no responsibility for their content.</p>
+    </div>
+  </div>
+</div>
 
 
 <% include footer %>
