--- a/views/festivals.ejs
+++ b/views/festivals.ejs
@@ -1,22 +1,22 @@
 <% include header %>
 <div class="container">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-6 col-md-offset-3 col-xs-12">
 			<br>
 			<ul> <%for(var i =0; i<festivals.length; i++){%>
 				<ul class="list-group">
-				<div id="options">
-					<li class="list-group-item">
-						<div> <img class="logo" src="http://www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
-							<form class = "moreInfoBtn" action = '/id/<%= festivals[i].name %>' method = 'get'>
-							<button type="submit" class="btn btn-default moreBtn">Find Out More</button></form>
-							</div>
+					<div id="options">
+						<li class="list-group-item">
+							<div> <img class="logo" src="http://www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
+								<form class = "moreInfoBtn" action = '/id/<%= festivals[i].name %>' method = 'get'>
+									<button type="submit" class="btn btn-default moreBtn">Find Out More</button></form>
+								</div>
 
-							<%var date= new Date(festivals[i].lastDeadline).toString().split(" ")%>
+								<%var date= new Date(festivals[i].lastDeadline).toString().split(" ")%>
 
-							<div class="name"> <%= festivals[i].name%></div> Fee: <%=festivals[i].fee%>, Country: <%=festivals[i].country%>, Category: <%=festivals[i].category%>, 
-							Date: <%= date[1]+" "+date[2]+" "+date[3] %> 
-						</li> 
+								<div class="name"> <%= festivals[i].name%></div> Fee: <%=festivals[i].fee%>, Country: <%=festivals[i].country%>, Category: <%=festivals[i].category%>, 
+								Date: <%= date[1]+" "+date[2]+" "+date[3] %>
+							</li> 
 						</div>
 						<%}%>
 						<br>
@@ -26,4 +26,6 @@
 				<h4> No results found. Please broaden your search terms. </h4>
 				<%}%>
 			</div>
-			<% include footer %>
+		</div>
+	</div>
+	<% include footer %>
