--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,23 +13,21 @@
 </head>
 <body>
 	<style type="text/css">
-		<!--
-		BODY { 
+		body{ 
 			background: url(cover.jpg) no-repeat;
 			opacity: 0.6;
 			background-size: cover;
 		}
-	-->
-</style>
+	</style>
 
-<form action = '/search' method = 'get'>
-	<div class="container transparentBox">
-		<div class="row offset6" id="login-container">
-			<div class="span8 offset2">
-				<p><a href="/about" id="link">Enter the Film Festival Finder for Filmmakers</a></p>
+	<form action = '/search' method = 'get'>
+		<div class="container transparentBox">
+			<div class="row offset6" id="login-container">
+				<div class="span8 offset2">
+					<p><a href="/about" id="link">Enter the Film Festival Finder for Filmmakers</a></p>
+				</div>
 			</div>
 		</div>
-	</div>
-</form>
+	</form>
 
-<% include footer %>
+	<% include footer %>
