--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,27 +1,23 @@
 <% include header %>
 
-
 <br>
 <div class="container">
 	<div class="row">
 		<div class="col-md-10 col-md-offset-2">
-			<h3 id="comment_title"> Your Notes on the <%=watchThing.name%> </h3> </div>
-
-			<div class ="col-md-4 col-md-offset-5" id="addSpace">
-				<form class="form-inline" role="form" action = '/favoriteList<%=commentID%>/comments' method = 'post'>
-					<div class="form-group">
-						<input type="text" name="text" class="form-control" placeholder="Enter notes">
-					</div>
-					<button type="submit" class="btn btn-default">Add Note</button>
-
-					<%for(var i =0; i<returnMe.length; i++){%>
-					<div id="moreSpace">"<%=returnMe[i].text%>"</div>
-					<%}%>
-				</div>
-			</div>
+			<h3 id="comment_title"> Your Notes on the <%=festivalName.name%> </h3> 
 		</div>
+		<div class ="col-md-4 col-md-offset-4" id="addSpace">
+			<form class="form-inline" role="form" action = '/favoriteList<%=commentID%>/comments' method = 'post'>
+				<div class="form-group">
+					<input type="text" name="text" class="form-control" placeholder="Enter notes">
+				</div>
+				<button type="submit" class="btn btn-default">Add Note</button>
+			</form>
+			<%for(var i =0; i<festivalData.length; i++){%>
+			<div id="moreSpace">"<%=festivalData[i].text%>"</div>
+			<%}%>
+		</div>
+	</div>
+</div>
 
-
-
-
-		<% include footer %>
+<% include footer %>
