--- a/views/id.ejs
+++ b/views/id.ejs
@@ -1,29 +1,28 @@
 <% include header %>
+
 <div class ="container">
   <div class="row" id="info">
     <div class="col-md-6 col-md-offset-3">
       <h3> <%=oneFestival.name%> </h3>
     </div>
+    <%for(var i =1; i<festivalData.length; i++){%>
+    <%if(festivalData[i] != undefined){%>
     <div id="carousel-example-generic2" class="carousel slide pull-right" data-ride="carousel">
-      <%for(var i =1; i<data.length; i++){%>
-      <%if(data[i] != undefined){%>
-      <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-         <img class= "img-responsive center-block" id="imageTest" src= "<%= data[0].images.standard_resolution.url%>">
+         <img class= "img-responsive center-block" id="imageTest" src= "<%= festivalData[0].images.standard_resolution.url%>">
          <div class="carousel-caption">
          </div>
        </div>
-       <%for(var i =1; i<data.length; i++){%>
+       <%for(var i =1; i<festivalData.length; i++){%>
        <div class="item">
-        <img class= "img-responsive center-block" id="imageTest" src= "<%= data[i].images.standard_resolution.url%>">
+        <img class= "img-responsive center-block" id="imageTest" src= "<%= festivalData[i].images.standard_resolution.url%>">
         <div class="carousel-caption">
         </div>
       </div>
       <%}%>
       <%}%>
     </div>
-    <!-- Controls -->
     <a class="left carousel-control" href="#carousel-example-generic2" role="button" data-slide="prev">
       <span class="glyphCarousel glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -35,7 +34,7 @@
     <br>
   </div>
   <%}%>
-
+  <br>
 
   <div id="list" classs = ".col-md-6">
     <ul>
@@ -48,12 +47,9 @@
      <li> <strong> Festival Start: </strong> <%=oneFestival.festivalStart%> </li> 
      <li> <strong> Festival End: </strong> <%=oneFestival.festivalEnd%> </li>
      <li> <a href="<%=oneFestival.siteUrl%>"> Festival Site </a></li>
-     
-
      <br>
      <%if (festivalFound) {%>
      <button type="button" class="btn btn-default btn1" disabled> Festival already in Favorites!</button>
-
      <%} else if (currentUser) {%>
      <form action = '/favoriteList' method = 'post'>
        <input type="hidden" name="name" value="<%=oneFestival.name%>">
@@ -71,7 +67,5 @@
   </div>
 </div>
 </div>
-</div>
-
 
 <% include footer %>
