--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,52 +1,44 @@
 <% include header %>
 
-
 <div class="container">
   <% if(user) { %>
   Hello <b><%= typeof user.name === 'string' ? user.name : 'Unknown' %></b>!
   <% } %>
   <h3 class="text-center">Find your Festival</h3>
   <div class="col-sm-3">
-
     <div class="form-group">
-
-      <!-- chosen -->
       <form role="form" method="get" action="/festivals">
-       Fee <select class="form-control feeClass" name="fee">
-       <option value=""></option>
-       <option value="yes">Fee</option>
-       <option value="no">No Fee</option>
-     </select>
+       Fee 
+       <select class="form-control feeClass" name="fee">
+         <option value=""></option>
+         <option value="yes">Fee</option>
+         <option value="no">No Fee</option>
+       </select>
 
-     <div id="categoryTitle"> Category </div> 
-     <select multiple class="chzn-select form-control" id="category" name="category">
-      <option value=""></option>
-      <%for (var i =0; i<category.length; i++){%>
-      <option value="<%=category[i]%>"><%=category[i]%></option>
-      <%}%>
-    </select>
+       <div id="categoryTitle"> Category </div> 
+       <select multiple class="chzn-select form-control" id="category" name="category">
+        <option value=""></option>
+        <%for (var i =0; i<category.length; i++){%>
+        <option value="<%=category[i]%>"><%=category[i]%></option>
+        <%}%>
+      </select>
 
-    Country <select class="form-control countryClass" name="country">
-    <option value=""></option>
-    <%for (var i =0; i<uniqueCountries.length; i++){%>
-    <option value="<%=uniqueCountries[i]%>"><%=uniqueCountries[i]%></option>
-    <%}%>
-  </select>  
+      Country 
+      <select class="form-control countryClass" name="country">
+        <option value=""></option>
+        <%for (var i =0; i<uniqueCountries.length; i++){%>
+        <option value="<%=uniqueCountries[i]%>"><%=uniqueCountries[i]%></option>
+        <%}%>
+      </select>  
 
-  <p>Search Date Start: <input type="text" name = "startDate" id="datepicker"></p>
-  <p>Search Date End: <input type="text" name = "endDate" id="datepicker2"></p>
-  <input type="submit" class="btn btn-default" value="Submit">
-</form>
+      <p>Search Date Start: <input type="text" name = "startDate" id="datepicker"></p>
+      <p>Search Date End: <input type="text" name = "endDate" id="datepicker2"></p>
+      <input type="submit" class="btn btn-default" value="Submit">
+    </form>
 
-<!-- change type to date to get html datepicker -->
-
+  </div>
 </div>
 </div>
-
-
-
-
-
 
 <br>
 <% include footer %>
