Added error page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,10 @@
 	<div class="row">
 		<div class=".col-md-offset-6 paragraph" id="errorText">
 			<h3> 404 Error </h3>
-			Oops! The page you were trying to reach doesn't exist or some other error occured. Please try again!
+			<img id="filmstrip" src = "/filmstrip.jpg">
+				<br>
+			<p>Oops! Something went wrong here... </p>
+			<p>Please try again!</p>
 		</div>
 	</div>
 </div>
