--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,11 @@ body{
 	font-family: raleway; 
 	font-size: 16px;
 }
+#filmstrip{
+	width: 30%;
+	border-radius: 5%;
+	margin: 3%;
+}
 .navbar{
 	background-color: #B9B3AF;
 }
@@ -180,6 +185,11 @@ ul{
 	#link{
 		font-size:29px;
 	}
+	#filmstrip{
+	width: 60%;
+	border-radius: 5%;
+	margin: 3%;
+}
 }
 #carousel-example-generic{
 	width: 40%;
